# CloudFinOpsAgent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: init_knowledge_base.py  seed_localstack.py
src/cloud_finops_agent/: __init__.py  main.py
src/cloud_finops_agent/agents/: factory.py
src/cloud_finops_agent/config/: settings.py
src/cloud_finops_agent/graph/: blueprint.py  nodes.py  router.py  state.py
src/cloud_finops_agent/infrastructure/: __init__.py  aws_factory.py
src/cloud_finops_agent/models/: analysis.py  aws_resources.py  errors.py
src/cloud_finops_agent/prompts/: agent_prompts.py
src/cloud_finops_agent/tools/: __init__.py  aws_discovery_tools.py
tests/: conftest.py  test_graph_flow.py
