[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-finops-agent"
version = "0.1.0"
description = "Cloud FinOps AI Agent based on LangGraph, LocalStack, Qdrant, and Langfuse."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aioboto3>=13.2.0,<14.0.0",
    "aiobotocore>=2.15.2,<3.0.0",
    "boto3>=1.35.36,<2.0.0",
    "botocore>=1.35.36,<2.0.0",
    "httpx>=0.27.2,<1.0.0",
    "langchain>=0.3.7,<0.4.0",
    "langchain-anthropic>=0.2.4,<0.3.0",
    "langchain-community>=0.3.5,<0.4.0",
    "langchain-openai>=0.2.6,<0.3.0",
    "langfuse>=2.53.3,<3.0.0",
    "langgraph>=0.2.45,<0.3.0",
    "localstack-client>=2.5,<3.0",
    "pydantic>=2.9.2,<3.0.0",
    "pydantic-settings>=2.6.1,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "qdrant-client>=1.12.1,<2.0.0",
    "rich>=13.9.4,<14.0.0",
    "structlog>=24.4.0,<25.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "typer>=0.13.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0,<2.0.0",
    "pytest>=8.3.3,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "respx>=0.21.1,<1.0.0",
    "ruff>=0.7.3,<1.0.0",
    "types-aiobotocore[cloudwatch,ec2,iam,s3]>=2.15.2,<3.0.0",
]

[project.scripts]
cloud-finops-agent = "cloud_finops_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "UP",
    "W",
]
ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
